<resources>
    <string name="app_name" translatable="false">Mobile_Amethyst_Audio</string>
    <string name="amethyst_audio_name" translatable="false">Amethyst Audio</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_confirm">Confirm</string>
    <string name="login_have_no_account">Have no account?</string>
    <string name="login_create"><u>Create</u></string>
    <string name="login_reset_password"><u>Reset password</u></string>
    <string name="in_trand">Trands:</string>
    <string name="watch_all">Watch all</string>
    <string name="search">Search</string>
    <string name="new_albums">New albums:</string>
    <string name="to_record">To Record</string>
    <string name="to_search">To Search</string>
    <string name="to_library">To Library</string>
    <string name="to_user_profile">To User Profile</string>
</resources>